--- a/a_differential_datalog_interpreter/a_differential_datalog_interpreter.tex
+++ b/a_differential_datalog_interpreter/a_differential_datalog_interpreter.tex
@@ -51,7 +51,7 @@
 	\city{Wuppertal}
 	\country{Germany}
 }
-\email{merlin.kramer@gmail.com}
+\email{merlin.kramer@d10.pw}
 
 \author{Kalmer Apinis}
 \affiliation{%
@@ -344,11 +344,13 @@ each body atom $b_m$, find the set of ground facts $F_j \subseteq F$ that match 
 	}
 	}
 	\caption{Substitution-based Immediate Consequence}
+	\label{alg:one}
 \end{algorithm}
-There is a noteworthy performance issue that arises due to the interaction between the substitution-based method
-and DRED. During the alternate derivation phase, the new program has one more body atom. This can be prohibitively
-more expensive to evaluate than the original program, since one extra body atom implies one extra iteration, which
-could generate a polynomial number of substitutions, due to the cartesian product nature of each step.
+Algorithm \ref{alg:one} is the formal specification of the substitution-based method. There is a noteworthy performance issue
+that arises due to the interaction between it and DRED. During the alternate derivation phase, the new program has
+one more body atom. This can be prohibitively more expensive to evaluate than the original program, since one extra
+body atom implies one extra iteration, which could generate a polynomial number of substitutions, due to the cartesian
+product nature of each step.
 \subsection{Relational algebra rewriting method}
 The de-facto datalog evaluation method, that virtually all recent reasoners\cite{bigdatalog, cog, nexus, recstep, dcdatalog, souffle} abide by, is to rewrite datalog rules into relational
 algebra, a well-known technique, to efficiently compute their evaluation, due to the extensive industrial and academic
@@ -500,7 +502,8 @@ data, and the meaning of the \verb|Var| suffix, that both facts and substitution
 to express recursive or iterative computations. It allows one to define iterative operations and data dependencies in
 the dataflow graph, enabling the system to track and propagate changes across iterations efficiently, with product
 timestamps. Each node either represents an operation, such as \verb|join_map|, that joins indexed collections and
-then applies a mapping function to the join output, or \verb|flat_map|, that given a function that outputs an iterable, applies it over a collection, and flattens each element's output to be part of a single collection.
+then applies a mapping function to the join output, or \verb|flat_map|, that given a function that outputs an iterable, applies
+it over a collection, and flattens each element's output to be part of a single collection.
 
 We also note that this is a summarized description, where certain trivial, or too-implementation-specific parts
 have been omitted. $\Sigma_0$ is the stream of empty substitutions indexed per rule identifier, which is pre-populated
@@ -513,7 +516,7 @@ stream of facts, and rules is the stream of rules, with two indexes, created wit
 	      which have been exhaustively expanded ought to be considered for application to the rule head.
 	\item In the first join, the function that is applied, is one that applies substitutions to the input atoms, therefore either creating new
 	      atoms, with less variables as terms, or the very same ones. This is equivalent to the necessary setup for step 1
-	      of Algorithm I to occur, making use of index 1.
+	      of Algorithm \ref{alg:one} to occur, making use of index 1.
 	\item The next join creates new substitutions, based on the newly minted atoms. All current substitutions are attempted
 	      to be expanded further, with the successful ones being emitted from the join.
 	\item This is the last step of the algorithm, where all final substitutions are applied to the head of each rule, index
@@ -525,38 +528,37 @@ In this section we provide a technical overview of the implemented reasoners, an
 a novel indexing technique for the substitution-based method, that at the cost of increased memory usage, can significantly
 decrease the number of times the operation that occurs the most frequently, substitution extension, occurs.
 
-We name Chibi the reasoner that uses the substitution-based method without DD, and differential, the one
-that does. Both of these reasoners share the implementation of the three core elements: unification, substitution application,
-and in asserting that a fact is ground. All of the aforementioned operations are trivial, and each do not require more than
-ten or so lines of code. Unification is a computationally cheap operation, given an atom, and a ground fact, the output is
-a new substitution that maps the variables of the right to the constants of the left one, all others are self descriptive,
-with substitution application merely substituting an atom's variables for the mapped variables in a substitution, and checking
-if a fact is ground is done by ensuring that no terms are variables.
+The reasoner that uses the substitution-based method without DD is named Chibi, differential is the one that does. Both of these
+reasoners share the implementation of the three core elements: unification, substitution application, and in asserting that a
+fact is ground. All of the aforementioned operations are trivial, and each do not require more than ten or so lines of code. Unification
+is a computationally cheap operation, given an atom, and a ground fact, the output is a new substitution that maps the variables
+of the right to the constants of the left one. All others are self descriptive, with substitution application merely substituting
+an atom's variables for the mapped variables in a substitution. Checking if a fact is ground is done by ensuring that no terms
+are variables.
 
-All three reasoners, Chibi, Differential and Relational, share the same simple in memory layout for the core elements of
-datalog, and storage, notably, in Rust terms, it is to be assumed that all referred data structures are standard library
-implementations, unless noted otherwise. Furthermore, a step of rule application is always done in parallel.
+Chibi, Differential and Relational all share the same memory layout for the core elements of datalog and storage. In Rust terms, it
+is to be assumed that all referred data structures are standard library implementations unless stated otherwise. Furthermore, a step
+of rule application is always done in parallel.
 \begin{itemize}
-	\item Constant: an enumeration of boolean, 64-bit integer or string, respectively named typed values.
-	\item Variable: a 8 bit integer, hence imposing a bound on the number of variables that a rule can have
+	\item Constant: an enumeration of boolean, 64-bit integer or string, respectively named typed values
+	\item Variable: an 8 bit integer, hence imposing a bound on the number of variables that a rule can have
 	\item Term: an enumeration of constant and variable
 	\item Atom: A struct with a vector of terms, and a symbol, that can be either a 64-bit integer or a string
 	\item Rule: A struct with an atom representing the head, and a vector of atoms as the body
 	\item Storage: A Hash map of hash sets, with keys representing relation names, or id, and their respective
-	      hash sets containing vectors of typed terms, ground facts.
+	      hash sets containing vectors of typed terms, ground facts
 \end{itemize}
 Relational reasoner has one extra data structure, a btree index, that is used for sort-merge joins. Relational relies on
-naively translating datalog rules into $\mathcal{SPJ}$, without any further optimizations whatsoever, aside from inserting
+naively translating datalog rules into relational algebra, without any further optimizations whatsoever, aside from inserting
 all data that is to be joined in its index, right before actually doing it. All relational operations and their evaluator
 were implemented from scratch. The point of this reasoner is to evaluate how performant the popular relational algebra
-evaluation can be in isolation, compared to the often forgotten substitution-based method, and differential.
+evaluation can be in isolation, compared to the often forgotten substitution-based method.
 
 Rule application until the least fixpoint is reached is done with semi-naive evaluation\cite{abiteboul}, with a program
 transformation. DRED is implemented as described in \cite{dred}, in two steps, with both the overdeletion and alternative
 derivation program being executed with semi-naive evaluation too. Both Chibi and Relational use the same function for this,
-with differential evidently not using semi-naive evaluation neither DRED, given that it has its own iteration mechanism, as
-demonstrated in figure \ref{fig:substitution_simple_ddflow}, and handling of additions and retractions.
-
+with differential evidently not using semi-naive evaluation nor DRED, given that it has its own iteration mechanism, heavily
+inspired by semi-naive evaluation, which already handles retractions.
 \subsection{Demand-driven Multiple-column-based Indexing}
 There is a possibly very large performance cost of the substitution-method, that can be exemplified in the specific scenario
 of DRED, that could render it unable to be used in practice. As it was introduced, substitutions are both incrementally expanded,
@@ -564,72 +566,69 @@ and built anew, by iterating over every single body atom.
 
 In the second step of DRED, an alternate derivation program is created. This program has one extra body atom, representing
 overdeletions of the head's relation. This implies that this step could be prohibitively more expensive to evaluate than even
-evaluating the program, due to the cartesian nature of the unification step, that implies iterating over the knowledge base once
-once, for every atom. This inefficiency can be demonstrated the following example, in which the rule could be seen as the
-alternate derivation step of some rule: $R(?x, ?z) <- T(?x, ?y), T(?y, ?z)$, with $-R$ representing the overdeletion estimation
-from the previous step.
+evaluating the program, due to the cartesian nature of the unification step, that implies iterating over the knowledge base once, for
+every atom. This inefficiency can be demonstrated with the following example, in which the rule could be seen as the alternate derivation
+step of some rule: $R(?x, ?z) <- T(?x, ?y), T(?y, ?z)$, with $-R$ representing the overdeletion estimation from the previous step.
 
 Let $P = \{+R(?x, ?z) \leftarrow -R(?x, ?z), T(?x, ?y), T(?y, ?z)\}$, and $EDB = \{T(a, b), T(b, c), T(c, d), -R(a, c), -R(b, d)\}$
-
-Algorithm I will have three iterations:
+Algorithm \ref{alg:one} will have three iterations:
 \begin{enumerate}
 	\item \begin{enumerate}
 		      \item Current body atom: $-R(?x, ?z)$, $\Sigma_0$: $[\{\}]$
 		      \item Fresh atoms - Applying all $\sigma : \Sigma_0$ to $-R(?x, ?z)$ yields $-R(?x, ?z)$
 		      \item Substitution extension: \begin{enumerate}
-			            \item unification: -R(?x, ?z) U -R(a, c) = $\{?x \rightarrow a, ?z \rightarrow c\}$
-			            \item unification: -R(?x, ?z) U -R(b, d) = $\{?x \rightarrow b, ?z \rightarrow d\}$
+			            \item unification: -R(?x, ?z) $\cup$ -R(a, c) = $\{?x \rightarrow a, ?z \rightarrow c\}$
+			            \item unification: -R(?x, ?z) $\cup$ -R(b, d) = $\{?x \rightarrow b, ?z \rightarrow d\}$
 		            \end{enumerate}
 	      \end{enumerate}
 	\item \begin{enumerate}
 		      \item Current body atom: $T(?x, ?y)$, $\Sigma_1$: $[\{?x \rightarrow a, ?z \rightarrow c\}, \{?x \rightarrow b, ?z \rightarrow d\}]$
 		      \item Fresh atoms - Applying all $\sigma : \Sigma_1$ to $T(?x, ?y)$ yields $T(a, ?z)$, $T(b, ?z)$
 		      \item Substitution extension: \begin{enumerate}
-			            \item unification: T(a, ?y) U T(a, b) = $\{?x \rightarrow a, ?y \rightarrow b, ?z \rightarrow c\}$
-			            \item unification: T(a, ?y) U T(b, c) = none
-			            \item unification: T(a, ?y) U T(c, d) = none
-			            \item unification: T(b, ?y) U T(a, b) = none
-			            \item unification: T(b, ?y) U T(b, c) = $\{?x \rightarrow b, ?y \rightarrow c, ?z \rightarrow d\}$
-			            \item unification: T(b, ?y) U T(c, d) = none
+			            \item unification: T(a, ?y) $\cup$ T(a, b) = $\{?x \rightarrow a, ?y \rightarrow b, ?z \rightarrow c\}$
+			            \item unification: T(a, ?y) $\cup$ T(b, c) = none
+			            \item unification: T(a, ?y) $\cup$ T(c, d) = none
+			            \item unification: T(b, ?y) $\cup$ T(a, b) = none
+			            \item unification: T(b, ?y) $\cup$ T(b, c) = $\{?x \rightarrow b, ?y \rightarrow c, ?z \rightarrow d\}$
+			            \item unification: T(b, ?y) $\cup$ T(c, d) = none
 		            \end{enumerate}
 	      \end{enumerate}
 	\item \begin{enumerate}
 		      \item Current body atom: $T(?y, ?z)$, $\Sigma_2$: $[\{?x \rightarrow a, ?y \rightarrow b, ?z \rightarrow c\}, \{?x \rightarrow b, ?y \rightarrow c, ?z \rightarrow d\}]$
 		      \item Fresh atoms - Applying all $\sigma : \Sigma_2$ to $T(?y, ?z)$ yields $T(b, c)$, $T(c, d)$
 		      \item Substitution extension: \begin{enumerate}
-			            \item unification: T(b, c) U T(a, b) = none
-			            \item unification: T(b, c) U T(b, c) = $\{?x \rightarrow a, ?y \rightarrow b, ?z \rightarrow c\}$
-			            \item unification: T(c, d) U T(c, d) = none
-			            \item unification: T(c, d) U T(a, b) = none
-			            \item unification: T(c, d) U T(b, c) = none
-			            \item unification: T(c, d) U T(c, d) = $\{?x \rightarrow b, ?y \rightarrow c, ?z \rightarrow d\}$
+			            \item unification: T(b, c) $\cup$ T(a, b) = none
+			            \item unification: T(b, c) $\cup$ T(b, c) = $\{?x \rightarrow a, ?y \rightarrow b, ?z \rightarrow c\}$
+			            \item unification: T(c, d) $\cup$ T(c, d) = none
+			            \item unification: T(c, d) $\cup$ T(a, b) = none
+			            \item unification: T(c, d) $\cup$ T(b, c) = none
+			            \item unification: T(c, d) $\cup$ T(c, d) = $\{?x \rightarrow b, ?y \rightarrow c, ?z \rightarrow d\}$
 		            \end{enumerate}
 	      \end{enumerate}
 \end{enumerate}
 With the final substitutions being: $[\{?x \rightarrow a, ?y \rightarrow b, ?z \rightarrow c\}, \{?x \rightarrow b, ?y \rightarrow c, ?z \rightarrow d\}]$, therefore inferring two atoms:
-$+R(a, c)$ and $+R(b, d)$. As it can be seen, the major source of inefficiency are the wasted calls to unification attempt, that could
-grow polynomially with each new atom. The solution to this issue in theory is very straightforward; to avoid the cartesian product. We
-devise a novel indexing technique specifically tailored to be portable to DD.
+$+R(a, c)$ and $+R(b, d)$. The major source of inefficiency are calls to unification attempt, that yield no new substitution. The number
+of unification attempts could grow quadratically with each next body atom. The solution to this issue is straightforward; to
+avoid the cartesian product. We devise a novel indexing technique specifically tailored to be portable to DD.
 
-Returning to the example, it is trivial to see that unification attempts can be made optimal by joining on bindings; If $T(a, ?y)$ is the
+Returning to the example, it is trivial to see that wasteful unification attempts can be prevented by joining on bindings; If $T(a, ?y)$ is the
 left-hand side of unification, and $T(a, b)$, $T(b, c)$ are the candidates, no candidate that does not already match all constants
-in $T(a, ?y)$ would produce a substitution extension. This significantly prunes the search space, to entirely avoid unifications that
-would not yield substitution extensions.
+in $T(a, ?y)$ would produce a substitution extension.
 
 We name our approach Demand-driven Multiple-column-based Indexing, because indexes are built on-demand to address the need of indices for
-joining substitutions, that can be over multiple variables, therefore spanning over multiple columns, in each iteration. First, we demonstrate
-the technique over the same example, and then provide a new version of Algorithm I, lastly, we modify the DD version to
-also contain this indexing.
+joining substitutions, that can be over multiple constants, therefore spanning over multiple columns, in each iteration. For each rule we determine
+the column combinations that will be used in such a join, and maintain one globally shared index for each unique column combination. First, we
+demonstrate the technique over the same example, and then provide a new version of Algorithm \ref{alg:one}.
 \begin{enumerate}
 	\item \begin{enumerate}
 		      \item Current body atom: $-R(?x, ?z)$, $\Sigma_0$: $[\{\}]$
 		      \item Fresh atoms - Applying all $\sigma : \Sigma_0$ to $-R(?x, ?z)$ yields $-R(?x, ?z)$
 		      \item Index 1 - Index all fresh atoms with the positions of their constant terms as keys: $\{[] : [[?x, ?z]]\}$
-		      \item Index 2 - Index $-R$ based on all distinct values of the column keys of index 1 : $\{[]: [[a, c], [b, d]]\}$
-		      \item Index 3 - Join Index 1 with Index 2:
+		      \item Index 2 - Index $-R$ based on all distinct values of the column keys of index 1 : $\{[]: [[a, c] : [[]], [b, d] : [[]]]\}$
+		      \item Index 4 - Join Index 1 with Index 2:
 		            \begin{enumerate}
-			            \item $([?x, ?z], [[a, c]])$
-			            \item $([?x, ?z], [[b, d]])$
+			            \item $([?x, ?z], [[a, c] : [[]]])$
+			            \item $([?x, ?z], [[b, d] : [[]]])$
 		            \end{enumerate}
 		      \item Attempt to unify:
 		            \begin{enumerate}
@@ -640,12 +639,12 @@ also contain this indexing.
 	\item \begin{enumerate}
 		      \item Current body atom: $T(?x, ?y)$, $\Sigma_1$: $[\{?x \rightarrow a, ?z \rightarrow c\}, \{?x \rightarrow b, ?z \rightarrow d\}]$
 		      \item Fresh atoms - Applying all $\sigma : \Sigma_1$ to $T(?x, ?y)$ yields $T(a, ?y)$, $T(b, ?y)$
-		      \item Index 1 - Index all fresh atoms with the positions of their constant terms as keys: $\{[0] : [[a, ?z], [b, ?z]]\}$
-		      \item Index 2 - Index $T$ based on all distinct values of the column keys of index 1  $\{[0]: \{[a]: [[b]], [[b]]: [[c]], [c]: [[d]]\}\}$
-		      \item Index 3 - Join Index 1 with Index 2:
+		      \item Index 1 - Index all fresh atoms with the positions of their constant terms as keys: $\{[0] : [[a, ?y], [b, ?y]]\}$
+		      \item Index 2 - Index $T$ based on all distinct values of the column keys of index 1  $\{[0]: \{[a]: [[b]], [b]: [[c]], [c]: [[d]]\}\}$
+		      \item Index 4 - Join Index 1 with Index 2:
 		            \begin{enumerate}
-			            \item $([?y], [[b]]])$
-			            \item $([?y], [[c]]])$
+			            \item $([a, ?y], [[a] : [[b]]]])$
+			            \item $([b, ?y], [[b] : [[c]]]])$
 		            \end{enumerate}
 		      \item Attempt to unify:
 		            \begin{enumerate}
@@ -658,10 +657,10 @@ also contain this indexing.
 		      \item Fresh atoms - Applying all $\sigma : \Sigma_2$ to $T(?y, ?z)$ yields $T(b, c)$, $T(c, d)$
 		      \item Index 1 - Index all fresh atoms with the positions of their constant terms as keys: $\{[0, 1] : [[b, c], [c, d]]\}$
 		      \item Index 2 - Index $T$ based on all distinct values of the column keys of index 1 : $\{[0, 1]: \{[a, b]: [[]], [b, c]: [[]], [c, d]: [[]]\}\}$
-		      \item Index 3 - Join Index 1 with Index 2:
+		      \item Index 4 - Join Index 1 with Index 2:
 		            \begin{enumerate}
-			            \item $([b, c], [[]])$
-			            \item $([c, d], [[]])$
+			            \item $([b, c], [[b, c]: [[]]])$
+			            \item $([c, d], [[c, d]: [[]]])$
 		            \end{enumerate}
 		      \item Attempt to unify:
 		            \begin{enumerate}
@@ -671,16 +670,16 @@ also contain this indexing.
 	      \end{enumerate}
 \end{enumerate}
 From this new example, it can be seen that the indexing scheme is relatively simple, relying on creating new indices that would allow unification
-to never wastefully occur. We now structure it as Algorithm II.
+to never wastefully occur. We now structure it as Algorithm \ref{alg:two}.
 
-Let $P : a \to [\mathbb{N}]$ be a function mapping an atom to an array of integers representing the positions of constants within the atom's terms, and
-$R : ([\mathbb{N}], a) \to C$ another function, that maps an array of integers and an atom, to a subset of the atom's terms $c$ denoted by $C$.
+Let $P : a \to [\mathbb{N}]$ be a function mapping an atom to an array of integers representing the positions of constants within the atom's
+terms, and $R : ([\mathbb{N}], a) \to C$ another function, that maps an array of integers and an atom, to a subset of the atom's terms $c$ denoted by $C$.
 
 The algorithm relies on two main indexes:
 \begin{enumerate}
-	\item $I_1 : P(a) \to 1^{\mathfrak{A}}$, where $1^{\mathfrak{A}}$ is the subset of
-	      $\mathfrak{A}$ such that all $a$ have the same $P(a)$ value.
-	\item $I_2 : P(a) \to I_3$, where $I_3 : R(F) \to 1^{F}$, and $1^{F}$ is the subset
+	\item $I_1 : P(a) \to 1^{F}$, where $1^{F}$ is the subset of
+	      $F$ such that all $a$ have the same $P(a)$ value.
+	\item $I_2 : P(a) \to I_3$, where $I_3 : R(F) \to 1^{F}$ is a nested index, and $1^{F}$ is the subset
 	      of $F$ such that all $a$ have the same $R(P(a), a)$.
 \end{enumerate}
 \begin{algorithm}
@@ -706,10 +705,11 @@ The algorithm relies on two main indexes:
 	}
 	}
 	\caption{Substitution-based Immediate Consequence with Demand-driven Multiple-column-based Indexing}
+	\ref{alg:two}
 \end{algorithm}
-All indexing steps are $O(|F|)$ in time and data complexity, save for index two, that has worst-case data complexity of $O(|F| \cdot 2^{|a|}y)$, with $2^{|a|}$
+All indexing steps are $O(|F|)$ in time and data complexity, save for index two, that has worst-case data complexity of $O(|F| \cdot 2^{|a|})$, with $2^{|a|}$
 representing the powerset of the number of terms in some atom $a$, and $F$ such that it has only atoms $a$. The product with the powerset arises due to how
-indexing occurs by mapping all unique combinations of constant terms of fresh atoms, which in the worst-case could be exponential to arity.
+indexing occurs by mapping all unique combinations of constant terms of fresh atoms, which in the worst-case could be exponential to the arity.
 \begin{figure}
 	\centering
 	\begin{tikzpicture}[->,>=stealth,auto,node distance=6cm,
@@ -747,7 +747,7 @@ indexing occurs by mapping all unique combinations of constant terms of fresh at
 		% Fixpoint Iteration
 		\begin{scope}
 			\node (subs_var) [draw, below = 20mm of empty_sub] {\small Subs. Var};
-			\node (facts_var) at (fixpoint) [draw, below = 20mm of facts] {\small Facts. Var};
+			\node (facts_var) at (fixpoint) [draw, below = 20mm of facts] {$\text{\small Facts. Var}^6$};
 			\node (join1) at (fixpoint) [draw, below = 4mm of facts_var] {$\text{\small join\_map}$};
 			\node (join2) at (fixpoint) [draw, below = 4mm of join1] {$\text{\small join\_map}$};
 			\node (join3) at (fixpoint) [draw, below = 4mm of join2] {$\text{\small join\_map}$};
@@ -785,28 +785,26 @@ indexing occurs by mapping all unique combinations of constant terms of fresh at
 	\caption{Substitution method with indexing dataflow}
 	\label{fig:substitution_indexed_ddflow}
 \end{figure}
-Figure \ref{fig:substitution_indexed_ddflow} displays the DD version of Algorithm II, that mostly remains exactly the same, save for
-new operations happening during the phase before iteration. We now clarify the points of interest in the dataflow. There were no differences in the steps inside
-iteration, aside from joins happening through the vector of constant positions and relation symbols,
-instead of only relation symbols.
+Figure \ref{fig:substitution_indexed_ddflow} displays the DD version of Algorithm \ref{alg:two}, that mostly remains exactly the same, save for new
+operations happening during the phase before iteration. We now clarify the points of interest in the new dataflow. There were no differences in
+the steps inside iteration, aside from joins happening through the vector of constant positions and relation symbols, instead of only relation symbols.
 \begin{enumerate}
 	\item The first \verb|map| operator remains the same, indexing rules by their identifier and body size, used to ensure
 	      that only fully expanded substitutions will be applied to rule heads. The same as superscript $2$ in \ref{fig:substitution_simple_ddflow}.
-	\item The unique column combinations of the input ruleset are computed by this operator. Unlike in the imperative description of the algorithm, where
-	      column combinations are generated in each iteration, we pre generate all of them, and index them by relation symbol.
+	\item The unique column combinations of the input ruleset are computed by this operator.
 	\item This step joins the rule identifiers with the unique column combinations. This is only used at the very last join during iteration, to ensure that
 	      the output fact is indexed by the correct column combination.
 	\item Equivalent to superscript $1$ in \ref{fig:substitution_simple_ddflow}.
 	\item With superscript $2$, the input fact stream can be immediately indexed by the necessary constant position combinations. This is done by a join on
 	      relation symbol, that will index each fact by all column combinations.
+	\item Facts. var, unlike in Algorithm \ref{alg:one}'s dataflow, which was only indexed by relation, is now indexed by each unique column combination.
 \end{enumerate}
-This dataflow is possibly much more efficient. An arrangement in DD is a pre-computed, indexed representation of a collection that allows
-for efficient querying and manipulation of the data. These arrangements play a crucial role in optimizing the performance of dataflows. By carefully choosing
-which arrangements to create and maintain, it is possible to minimize the computational overhead and reduce the need for expensive recomputations.
+This dataflow is possibly much more efficient. An arrangement in DD is a pre-computed, indexed representation of a collection that allows for efficient
+querying and manipulation of the data. These arrangements play a crucial role in the performance of joins. By carefully choosing which arrangements to
+create and maintain, it is possible to keep joins efficient, without unnecessarily wasting memory.
 
-Most specifically, arrangements dictate the level of join parallelism, by the fact that the join operator shards the data among workers by the key of
-the arrangement, partitioning the data to be joined by a more fine-grained key than relation symbol, such as relation symbol and positions occupied by constants,
-constant values, as on Algorithm II, a higher degree of parallelism could be unlocked.
+Most specifically, arrangements dictate the level of join efficiency. The fact that the join operator indexes the data by a more fine-grained key than relation
+symbol, such as relation symbol and positions occupied by constant values, allows is to be much more restrictive than cartesian product.
 \section{Evaluation}
 Three thorough experiments were conducted in order to showcase relative performance, scalability, and memory usage, of all reasoners, with the intent being twofold:
 to evaluate the performance characteristics of DD, in isolation of virtually all other elements, and to establish as to whether general algorithmic
