--- a/a_differential_datalog_interpreter/software.bib
+++ b/a_differential_datalog_interpreter/software.bib
@@ -104,19 +104,25 @@ title = {Monadic Datalog and the Expressive Power of}
 }
 @misc{datascript,
 author = {missing},
-year =  {2050},
+year =  {2023},
 howpublished = {\url{https://github.com/tonsky/datascript}},
 note = {Accessed: 2022-11-04}
 }
+@misc{shapiro,
+author = {Bruno Rucy and Merlin Kramer},
+year =  {2023},
+howpublished = {\url{https://github.com/brurucy/shapiro}},
+note = {Accessed: 2023-05-31}
+}
 @misc{opa,
 author = {missing},
-year =  {2050},
+year =  {2023},
 howpublished = {\url{https://github.com/open-policy-agent/opa}},
 note = {Accessed: 2022-11-04}
 }
 @misc{datomic,
 author = {missing},
-year =  {2050},
+year =  {2023},
 howpublished = {\url{https://datomic.com}},
 note = {Accessed: 2022-11-04}
 }
@@ -128,7 +134,7 @@ note = {Accessed: 2022-11-04}
 }
 @misc{blogdynamicdatalog,
 author = {missing},
-year =  {2050},
+year =  {2023},
 howpublished = {\url{https://github.com/frankmcsherry/dynamic-datalog}},
 note = {Accessed: 2022-11-04}
 }
